--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <!-- partial:index.partial.html -->
 <main id="board"></main>
 <!-- partial -->
-  <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
-<script src='https://unpkg.com/gsap@3/dist/Draggable.min.js'></script>
-<script src='https://assets.codepen.io/16327/InertiaPlugin.min.js'></script><script  src="./script.js"></script>
+<script src='https://unpkg.co/gsap@3.9.0/dist/gsap.min.js'></script>
+<script src='https://unpkg.co/gsap@3.9.0/dist/Draggable.min.js'></script>
+<script src='https://assets.codepen.io/16327/InertiaPlugin.min.js'></script>
+<script src="./script.js"></script>
+
 
 </body>
 </html>
