--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="es" >
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0;url=javascript:void(0);">
+
   <title>CodePen - Sticky Notes</title>
   <link rel="stylesheet" href="./style.css">
 
