--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <!-- partial:index.partial.html -->
 <main id="board"></main>
 <!-- partial -->
-<script src='https://unpkg.co/gsap@3.9.0/dist/gsap.min.js'></script>
-<script src='https://unpkg.co/gsap@3.9.0/dist/Draggable.min.js'></script>
+<script src='js.js'></script>
+<script src='jss.js'></script>
 <script src="./script.js"></script>
 
 
