--- a/index.html
+++ b/index.html
@@ -12,18 +12,11 @@
 <!-- partial:index.partial.html -->
 <main id="board"></main>
 <!-- partial -->
-<script src='js.js'></script>
-<script src='jss.js'></script>
-<script src="./script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Flip.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Observer.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Draggable.min.js"></script>
-
-
-<!-- RoughEase, ExpoScaleEase and SlowMo are all included in the EasePack file -->    
-<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/EasePack.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/InertiaPlugin.min.js"></script>
+<script src="./script.js"></script>
 
 </body>
 </html>
