--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tablero de Notas Adhesivas</title>
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -16,6 +18,7 @@
 </div>
 
 <div id="note-palette">
+    <h4>Arrastra una nota</h4>
     <!-- Las notas de plantilla se generarán aquí con JS -->
 </div>
 <div id="board"></div>
