--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
 
 <div id="board-manager">
-    <h3>Mis Tableros</h3>
+    <h3>Mis Tableros <span id="sidebar-collapse-btn" title="Ocultar panel">‹</span></h3>
     <ul id="board-list"></ul>
     <button id="add-board-btn">Nuevo Tablero</button>
 </div>
+
+<div id="sidebar-expander" title="Mostrar panel">›</div>
 
 <div id="note-palette">
     <h4>Arrastra una nota</h4>
