--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <div id="board-manager">
     <h3>Mis Tableros <span id="sidebar-collapse-btn" title="Ocultar panel">‹</span></h3>
     <ul id="board-list"></ul>
+    <input type="search" id="search-input" placeholder="🔎 Buscar en tablero...">
+    <div id="global-search-results"></div>
     <button id="add-board-btn">Nuevo Tablero</button>
 </div>
 
