--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     <!-- Las notas de plantilla se generarán aquí con JS -->
 </div>
 <div id="board"></div>
+
+<div id="zoom-controls">
+    <button id="zoom-in-btn" title="Acercar">+</button>
+    <span id="zoom-level-display">100%</span>
+    <button id="zoom-out-btn" title="Alejar">-</button>
+    <button id="zoom-reset-btn" title="Restablecer Zoom">⛶</button>
+</div>
 <div id="trash-can"><img src="svg/trash-full-svgrepo-com.svg" alt="Papelera"></div>
 
 <script type="module" src="script.js"></script>
