--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 </div>
 <div id="trash-can"><img src="svg/trash-full-svgrepo-com.svg" alt="Papelera"></div>
 
+<script src="leader-line.min.js"></script>
 <script type="module" src="script.js"></script>
 
 </body>
