--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     <h4>Arrastra una nota</h4>
     <!-- Las notas de plantilla se generarán aquí con JS -->
 </div>
-<div id="board"></div>
+<div id="board-container">
+    <div id="board"></div>
+</div>
 
 <div id="zoom-controls">
     <button id="zoom-in-btn" title="Acercar">+</button>
