--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <h3>Gestor <span id="sidebar-collapse-btn" title="Ocultar panel">‹</span></h3>
 
     <div class="tab-nav">
-        <button class="tab-btn active" data-tab="boards">Tableros</button>
-        <button class="tab-btn" data-tab="create">Crear</button>
-        <button class="tab-btn" data-tab="lines">Líneas</button>
-        <button class="tab-btn" data-tab="background">Fondo</button>
-        <button class="tab-btn" data-tab="trash">Papelera</button>
+        <button class="tab-btn active" data-tab="boards" title="Tableros">🗂️<span class="tab-text">Tableros</span></button>
+        <button class="tab-btn" data-tab="create" title="Crear">✨<span class="tab-text">Crear</span></button>
+        <button class="tab-btn" data-tab="lines" title="Líneas">☍<span class="tab-text">Líneas</span></button>
+        <button class="tab-btn" data-tab="background" title="Fondo">🎨<span class="tab-text">Fondo</span></button>
+        <button class="tab-btn" data-tab="trash" title="Papelera">🗑️<span class="tab-text">Papelera</span></button>
     </div>
 
     <div id="tab-content-boards" class="tab-content active">
