--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
     </ul>
 </div>
 
+<!-- Menú Contextual para Pestañas -->
+<div id="tab-context-menu" class="hidden">
+    <ul>
+        <li id="ctx-tab-delete">🗑️ Limpiar Pestaña</li>
+    </ul>
+</div>
+
 <!-- Contenedor para Notificaciones (Toasts) -->
 <!-- Paleta de colores como un Popover -->
 <div id="color-picker-popover" class="hidden">
