--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
             </svg>
         </button>
     </div>
-    <!-- Las notas de plantilla se generarán aquí con JS -->
+    <div id="palette-scroll-container">
+        <!-- Las notas de plantilla se generarán aquí con JS -->
+    </div>
+    <div class="scroll-indicator">▼</div>
 </div>
 <div id="board-container">
     <div id="board"></div>
