--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tablero de Notas Adhesivas</title>
+
+    <!-- Metadatos para SEO -->
+    <meta name="description" content="Una aplicación web interactiva para crear y organizar notas adhesivas en tableros virtuales. Ideal para brainstorming, gestión de proyectos y organización personal.">
+    <meta name="keywords" content="notas adhesivas, tablero virtual, kanban, foda, brainstorming, organización, proyectos, sticky notes, virtual board">
+    <meta name="author" content="HectorDanielAyarachiFuentes">
+
+    <!-- Metadatos Open Graph para Redes Sociales (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Tablero de Notas Adhesivas Interactivo">
+    <meta property="og:description" content="Crea y organiza tus ideas con tableros de notas adhesivas virtuales, personalizables y fáciles de usar.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://github.com/HectorDanielAyarachiFuentes">
+    <!-- <meta property="og:image" content="https://tu-dominio.com/path/to/preview-image.png"> -->
+
+    <!-- Metadatos para Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="icon" href="svg/favicon-nota.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
