--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <meta property="og:description" content="Crea y organiza tus ideas con tableros de notas adhesivas virtuales, personalizables y fáciles de usar.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://github.com/HectorDanielAyarachiFuentes">
-    <!-- <meta property="og:image" content="https://tu-dominio.com/path/to/preview-image.png"> -->
+    <meta property="og:image" content="https://github.com/HectorDanielAyarachiFuentes/Sticky-Notes/blob/main/img-metadatos/dulce.png?raw=true">
 
     <!-- Metadatos para Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://github.com/HectorDanielAyarachiFuentes/Sticky-Notes/blob/main/img-metadatos/dulce.png?raw=true">
 
     <link rel="icon" href="svg/favicon-nota.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
