--- a/index.html
+++ b/index.html
@@ -176,9 +176,46 @@
 <!-- Modal "Sobre Mí" -->
 <div id="about-modal" class="modal-overlay hidden">
     <div class="modal-content">
+        <audio id="about-modal-audio" src="musica/dulcehermosa.mp3" loop></audio>
+        <div class="dancing-notes-container">
+            <div class="dancing-note note-1"></div>
+            <div class="dancing-note note-2"></div>
+            <div class="dancing-note note-3"></div>
+        </div>
         <button class="modal-close-btn">&times;</button>
         <h2>Sobre la Aplicación</h2>
-        <img src="img-about/dulceflamengo.png" alt="Mascota de la aplicación" class="about-modal-img">
+        <div class="about-image-container">
+            <img src="img-about/dulceflamengo.png" alt="Mascota de la aplicación" class="about-modal-img">
+            <div id="audio-visualizer">
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <!-- Más rayos para un efecto más intenso -->
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper"><div class="flare"></div></div>
+                <div class="flare-wrapper">
+                    <div class="flare"></div>
+                </div>
+            </div>
+        </div>
         <p><strong>Sticky Notes v1.0</strong></p>
         <p>Hola, soy Héctor Daniel Ayarachi Fuentes, el desarrollador de esta aplicación de notas adhesivas.</p>
         <p>Este proyecto fue creado con HTML, CSS y JavaScript puro, como una forma de practicar y demostrar mis habilidades en desarrollo web front-end.</p>
