--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
     <div id="palette-scroll-container">
         <!-- Las notas de plantilla se generarán aquí con JS -->
     </div>
-    <div class="scroll-indicator">▼</div>
+    <div class="scroll-indicator">
+        <img src="svg/abajo.svg" alt="Scroll para ver más">
+    </div>
 </div>
 <div id="board-container">
     <div id="board"></div>
