--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
             </svg>
         </button>
     </div>
+    <div class="scroll-indicator-up">
+        <img src="svg/arriba.svg" alt="Scroll para ver más">
+    </div>
     <div id="palette-scroll-container">
         <!-- Las notas de plantilla se generarán aquí con JS -->
     </div>
