--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
 
 <div id="note-palette">
     <div class="palette-header">
-        <span>Crear Nota</span>
+        <div class="palette-title-container">
+            <img src="svg/crear-nota.svg" alt="Crear Nota" class="palette-create-icon">
+        </div>
         <button id="pin-palette-btn" title="Fijar paleta">
             <svg class="pin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M16 3.535V12a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1V3.535a5.5 5.5 0 1 1 8 0zM13 2a3.5 3.5 0 1 0-2 0V12h2V2z"/>
+                <path d="M17 4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v7l-2 3v2h6v5l1 1 1-1v-5h6v-2l-2-3V4z"/>
             </svg>
         </button>
     </div>
