--- a/index.html
+++ b/index.html
@@ -125,9 +125,7 @@
             <img src="svg/crear-nota.svg" alt="Crear Nota" class="palette-create-icon">
         </div>
         <button id="pin-palette-btn" title="Fijar paleta">
-            <svg class="pin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M17 4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v7l-2 3v2h6v5l1 1 1-1v-5h6v-2l-2-3V4z"/>
-            </svg>
+            <img src="svg/pin.svg" alt="Fijar" class="pin-icon">
         </button>
     </div>
     <div class="scroll-indicator-up">
