--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 <div id="toast-container"></div>
 <script src="leader-line.min.js"></script>
-<script type="module" src="js\script.js"></script>
+<script type="module" src="script.js"></script>
 
 </body>
 </html>
