--- a/index.html
+++ b/index.html
@@ -117,9 +117,13 @@
         </div>
 
         <div id="tab-content-trash" class="tab-content">
-            <p class="tab-title">Notas Eliminadas</p>
             <button id="empty-trash-btn">Vaciar Papelera</button>
-            <div id="trash-list-container"></div>
+            <div id="trash-list-container">
+                <p class="trash-section-title">Tableros Eliminados</p>
+                <div id="trash-boards-container"></div>
+                <p class="trash-section-title">Notas Eliminadas</p>
+                <div id="trash-notes-container"></div>
+            </div>
         </div>
     </div>
 
