--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            cursor: url('cursors/cursor.svg') 10 2, auto;
+        }
+    </style>
 </head>
 <body>
 
