--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <button class="tab-btn" data-tab="lines" title="Líneas">☍<span class="tab-text">Líneas</span></button>
         <button class="tab-btn" data-tab="share" title="Compartir">🔗<span class="tab-text">Compartir</span></button>
         <button class="tab-btn" data-tab="background" title="Fondo">🎨<span class="tab-text">Fondo</span></button>
+        <button class="tab-btn" data-tab="cursor" title="Cursor">👆<span class="tab-text">Cursor</span></button>
         <button class="tab-btn" data-tab="trash" title="Papelera">🗑️<span class="tab-text">Papelera</span></button>
     </div>
 
@@ -124,6 +125,11 @@
                 <p class="trash-section-title">Notas Eliminadas</p>
                 <div id="trash-notes-container"></div>
             </div>
+        </div>
+
+        <div id="tab-content-cursor" class="tab-content">
+            <!-- El contenido se genera dinámicamente con JS -->
+            <p class="empty-trash-message">Cargando opciones...</p>
         </div>
     </div>
 
