--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
         </div>
 
         <div id="tab-content-create" class="tab-content">
-            <button id="add-board-btn">Nuevo Tablero</button>
-            <div id="template-container"></div>
+            <!-- El contenido se genera dinámicamente con JS para un diseño más rico -->
         </div>
     
         <div id="tab-content-lines" class="tab-content">
