--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="modal-header">
             <div class="about-image-container">
                 <canvas id="audio-visualizer"></canvas>
-                <img src="img-about/dulceflamengo.png" alt="Mascota de la aplicación" class="about-modal-img">
+                <img src="img-about\Dulce.gif" alt="Mascota de la aplicación" class="about-modal-img">
             </div>
             <h2 class="modal-title">Héctor Daniel Ayarachi Fuentes</h2>
             <p class="modal-subtitle">Desarrollador Front-End</p>
