--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://github.com/HectorDanielAyarachiFuentes/Sticky-Notes/blob/main/img-metadatos/dulce.png?raw=true">
 
+    <!-- Links -->
     <link rel="icon" href="svg/favicon-nota.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
